# markdown-cms

./: Cargo.toml  README.md
content/: potato.md
src/: main.rs
static/: style.css
templates/: hello.html  index.html  layout.html  listing.html
test_content/: potato.md
