[package]
name = "markdown_cms"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.2"
actix-web = "4"
askama = { git = "https://github.com/djc/askama", version = "0.11.2", features = ["markdown"] }
env_logger = "0.9.3"
