[package]
name = "markdown_cms"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.2"
actix-web = "4"
anyhow = "1.0.68"
askama = { git = "https://github.com/djc/askama", version = "0.11.2", features = ["markdown"] }
chrono = { version = "0.4.23", features = ["serde"] }
env_logger = "0.9.3"
regex = "1.7.0"
serde = { version = "1.0.147", features = ["derive"] }
serde_yaml = "0.9.14"
